# fullStack-Merged

./: .gitignore  README.md  settings.gradle
ai/: appYpyZeka.ipynb  label_encoders (1).pkl  label_encoders.pkl  logs.csv  scaler (1).pkl  scaler.pkl  suspicious_statistics.csv  uçak_davranış_modeli.pkl  veri_labeled.csv  veri_sus.csv
ai/.ipynb_checkpoints/: predict_service.py-checkpoint.ipynb
datalink/: CMakeLists.txt  build.gradle  datalink_data.txt  datalinkservice.cpp  datalinkservice.h  main.cpp
datalink/proto/: datalink.proto
datalink/src/main/com/java/: DatalinkService.java  MainDatalink.java  MongoClientDatalink.java
datalink/src/main/proto/: datalink.proto
electron/: data.geojson  package-lock.json  package.json  vite.config.js
electron/public/data/: shapes.json
electron/src/: electron.js  index.css  index.html  index.js  preload.js
electron/src/proto/: radar.proto
iff/: CMakeLists.txt  iff_data.txt  iffservice.cpp  iffservice.h  main.cpp
iff/proto/: iff.proto
project.root/: package-lock.json  package.json  vite.config.js
project.root/main/: cleanup.js  datalinkStream.js  geoJsonHandlers.js  grpcClient.js  iffStream.js  main.js  radarStream.js  window.js
project.root/preload/: preload.js
project.root/proto/: datalink.proto  iff.proto  radar.proto
project.root/renderer/: index.html  index.js
project.root/renderer/assets/css/: ol.css
project.root/renderer/map/: geoJsonHandlers.js  initMap.js  interactions.js  layerControl.js  mergeRadarAndIFF.js  radarIntegration.js  radarPopup.js  styles.js
project.root/renderer/ui/: status.js  suspiciousPanel.js
radar/: CMakeLists.txt  dataManager.js  main.cpp  package-lock.json  radarservice.cpp  radarservice.h
radar/proto/: radar.proto
radar/sad/: .ninja_deps  .ninja_log  build.ninja  cmake_install.cmake
simService/: build.gradle
simService/src/main/java/com/aewc/sim/: Aircraft.java  AircraftGenerator.java  DataLinkService.java  DataLinkSimService.java  IffSimService.java  MainLauncher.java  MongoClientProvider.java  RadarSimService.java  TurkeyGeo.java
